Revert "Koch through inheritance"
This reverts commit 97c99176a5e9804b7be67332f9bdad4b8ec90bf3.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,10 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='./stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
-    <h2><%= info %></h2>
     <p>Welcome to my EJS <%= title %></p>
-
-
-    <img src="cow.jpg">
   </body>
 </html>
