partials are working - will adjust image

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-	<title><%= page_title %></title> 
+    <link rel='stylesheet' href='/stylesheets/header.css' />
 
-	<style type="text/css" media="screen"> 
-		body { 
-			background-color: skyblue; 
-			text-decoration-color: white; 
-		}
-	</style> 
+	<!-- <title> HEADER </title>  -->
+	<div class="container">
+
+		<img src="../images/logo.png" class="top-left-image">
+	</div>
+
 </head> 
