--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -1,36 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <%- include('../partials/head') %>
 
 <head>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
     <link rel='stylesheet' href='/stylesheets/login.css' />
     <title>Login</title>
+
+    
 </head>
-
-
 <body>
-    <div class="v14_116">
-        <!-- <div class="v14_117"></div>
-        <span class="v14_118">username:</span>
-        <span class="v14_119">password:</span>
-        <span class="v14_121">don’t have an account?</span> -->
-<!-- 
-        <div class="v14_122"></div>
-        <div class="v14_123"></div>
-        <div class="v14_125"></div>
-        <span class="v14_126">Log In!</span> -->
-        <!-- <div class="v14_127"></div> -->
-
+    <div class="loginBox">
         <form action="" method="post">
-            <!-- user input-->
-            Username:<br>
-            <input type="text" name="username" placeholder="Username" required><br><br>
-            Password:<br>
-            <input type="password" name="password" placeholder="Password" required><br><br>
-            <!-- submit button -->
-            <input type="submit" value="login">
-          </form>
+            <div class="input-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" class="input-field" placeholder="Username" required>
+            </div>
+            <div class="input-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" class="input-field" placeholder="Password" required>
+            </div>
+            <input type="submit" class="submit-btn" value="Log In">
+        </form>
     </div>
 </body>
-
 </html>
