--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to my EJS <%= title %></p>
+    <p> <%= message %></p>
 
 	<img src="/images/cow.jpg">
   </body>
