Home Page app.use + Formatted files

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p> <%= message %></p>
 
-	<img src="/images/cow.jpg">
-  </body>
+<head>
+  <title>
+    <%= title %>
+  </title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  <h1>
+    <%= title %>
+  </h1>
+  <p>
+    <%= message %>
+  </p>
+
+  <img src="/images/cow.jpg">
+</body>
+
 </html>
