--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -2,8 +2,8 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-        <link rel='stylesheet' href='/stylesheets/login.css' />
-        <title>Login</title>
+        <link rel='stylesheet' href='/stylesheets/createAccount.css' />
+        <title>Create Account</title>
     </head>
 
     <body>
@@ -17,9 +17,13 @@
                     <label for="password">password:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="login-button">Log In!</button>
+                <div class="input-group">
+                    <label for="password">confirm password:</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit" class="login-button">Create Account!</button>
                 <div class="signup-link">
-                    <p>don't have an account? <a href="/create-account" class="create-account-link">Sign up</a></p>
+                    <p>have an account? <a href="/login" class="login-link">Login</a></p>
                 </div>
             </form>
         </div>
