--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,12 +1,21 @@
 <!DOCTYPE html> 
 <html> 
-<head> 
-    <link rel='stylesheet' href='/stylesheets/header.css' />
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Login Page</title>
+	<link rel='stylesheet' href='/stylesheets/header.css' />
+</head>
 
-	<!-- <title> HEADER </title>  -->
-	<div class="container">
-
-		<img src="../images/logo.png" class="top-left-image">
-	</div>
-
-</head> 
+<body>
+	<header class="site-header">
+		<div class="logo">
+			<img src="../images/logo.png" alt="Logo" style="float:left; width:100px; height:auto;" class="top-left-image">
+		</div>
+		<nav class="user-navigation">
+			<a href="#" class="cart">
+				<img src="../images/shopping-cart.png" alt="">
+			</a>
+		</nav>
+	</header>
+</body>
+</html>
