--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Page</title>
-  <link rel="stylesheet" href="checkout.css">
+  <link rel="stylesheet" href="/stylesheets/checkout.css">
 </head>
 <body>
   <div class="checkout-container">
@@ -45,7 +45,7 @@
         <label for="zip">Zip:</label>
         <input type="text" id="zip" name="zip" required>
       </div>
-      <button type="submit" class="pay-button">Pay $19.99</button>
+      <button type="submit" class="pay-button">Pay!</button>
     </form>
   </div>
 </body>
