--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
+
+
+
 <html>
     <head>
+        <script src="/scripts/createAccount.js" defer></script>
+
         <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
         <link rel='stylesheet' href='/stylesheets/createAccount.css' />
         <title>Create Account</title>
