--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
-
-
-
 <html>
-    <head>
-        <script src="/scripts/createAccount.js" defer></script>
 
-        <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
-        <link rel='stylesheet' href='/stylesheets/createAccount.css' />
-        <title>Create Account</title>
-    </head>
+<head>
+  <script src="/scripts/createAccount.js" defer></script>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
+  <link rel='stylesheet' href='/stylesheets/createAccount.css' />
+  <title>Create Account</title>
+</head>
 
-    <body>
-        <div class="login-container">
-            <form class="login-form">
-                <div class="input-group">
-                    <label for="username">username:</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="input-group">
-                    <label for="password">confirm password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <button type="submit" class="login-button">Create Account!</button>
-                <div class="signup-link">
-                    <p>have an account? <a href="/login" class="login-link">Login</a></p>
-                </div>
-            </form>
-        </div>
-    </body>
+<body>
+  <div class="login-container">
+    <!-- Updated form tag with action and method attributes -->
+    <form class="login-form" action="/create-account" method="post">
+      <div class="input-group">
+        <label for="username">username:</label>
+        <input type="text" id="username" name="username" required>
+      </div>
+      <div class="input-group">
+        <label for="password">password:</label>
+        <input type="password" id="password" name="password" required>
+      </div>
+      <div class="input-group">
+        <!-- Fixed the ID and name for confirm password -->
+        <label for="confirm-password">confirm password:</label>
+        <input type="password" id="confirm-password" name="confirm-password" required>
+      </div>
+      <button type="submit" class="login-button">Create Account!</button>
+      <div class="signup-link">
+        <p>have an account? <a href="/login" class="login-link">Login</a></p>
+      </div>
+    </form>
+  </div>
+</body>
+
 </html>
