--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -26,12 +26,11 @@
       </div>
       <div class="input-group">
         <label for="password">password:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" value="<%= taken ? password : '' %>" required>
       </div>
       <div class="input-group">
-        <!-- Fixed the ID and name for confirm password -->
-        <label for="confirm-password">confirm password:</label>
-        <input type="password" id="confirm-password" name="confirm-password" required>
+          <label for="confirm-password">confirm password:</label>
+          <input type="password" id="confirm-password" name="confirm-password" value="<%= taken ? password : '' %>" required>
       </div>
       <button type="submit" class="login-button">Create Account!</button>
       <div class="signup-link">
