--- a/views/pages/create-account.ejs
+++ b/views/pages/create-account.ejs
@@ -19,7 +19,7 @@
 <body>
   <div class="login-container">
     <!-- Updated form tag with action and method attributes -->
-    <form class="login-form" action="/create-account" method="post">
+    <form class="create-account-form" action="/create-account" method="post">
       <div class="input-group">
         <label for="username">username:</label>
         <input type="text" id="username" name="username" required>
