--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -8,7 +8,7 @@
 
     <body>
         <div class="login-container">
-            <form class="login-form">
+            <form class="login-form" action="/login" method="post">
                 <div class="input-group">
                     <label for="username">username:</label>
                     <input type="text" id="username" name="username" required>
