--- a/public/stylesheets/shoppingCart.css
+++ b/public/stylesheets/shoppingCart.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background: hsl(0, 0%, 97%);
+    background: hsl(0, 13%, 91%);
   }
   
   .shopping-cart-container {
@@ -68,12 +68,13 @@ body, html {
     padding: 20px;
     background: #f1f1f1;
     border-radius: 4px;
+  
   }
   
   .order-summary h2 {
     font-size: 1.5em;
     margin-bottom: 10px;
-  }
+  } 
   
   .checkout-btn {
     width: 100%;
@@ -94,7 +95,7 @@ body, html {
   /* Responsive adjustments */
   @media (max-width: 768px) {
     .shopping-cart-container {
-      flex-direction: column;
+      flex-direction: row;
     }
   
     .cart-items, .order-summary {
