WORKING HEADER OH YEAHHHHHH

--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="/stylesheets/shoppingCart.css">
+    <%- include('../partials/head.ejs') %>
 </head>
+
 <body>
     <div class="shopping-cart-container">
         <div class="cart-items">
