--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,6 +6,7 @@
     <%= title %>
   </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
+  <%- include('../partials/head.ejs') %>
 </head>
 
 <body>
