--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,25 +1,32 @@
-/* Ensure body has no margin to start with so everything aligns to the top */
 body, html {
+    font-family: 'Inter', sans-serif;
     margin: 0;
     padding: 0;
 }
 
 .site-header {
+    background-color: #ffffff;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    justify-content: space-between;
+    align-items: flex-end;
     padding: 10px 20px;
-    width: 100%; /* Ensure the header spans the full width */
+    width: 100%;
+    box-sizing: border-box;
+    border-bottom: 2px solid #000;
 }
 
 .logo {
-    width: 100%;
     display: flex;
+    align-items: center; 
+    height: 125px;
+    width: 100%;
     justify-content: flex-start;
 }
 
 .logo img {
-    height: 50px; /* Adjust based on your logo size */
+    max-height: 100%;
+    width: auto;
+    object-fit: contain;
 }
 
 .user-navigation {
@@ -30,14 +37,52 @@ body, html {
     padding-top: 10px;
 }
 
-.user-navigation a {
-    text-decoration: none;
-    color: #FFFFFF;
-    font-size: 14px;
+.user-navigation .cart img{
+    height: 30px;
+}
+
+.dropbtn {
+    background-color: #ffffff;
+    color: black;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+    white-space: nowrap;
+}
+
+.dropdown {
+    position: relative;
+    margin-left: 20px;
+}
+
+.action-items {
     display: flex;
     align-items: center;
 }
 
-.user-navigation .cart img{
-    height: 30px;
+.dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
