--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -4,6 +4,7 @@
         <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" />
         <link rel='stylesheet' href='/stylesheets/login.css' />
         <title>Login</title>
+        <%- include('../partials/head.ejs') %>
     </head>
 
     <body>
