--- a/views/pages/view-product.ejs
+++ b/views/pages/view-product.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Product Page</title>
     <link rel="stylesheet" href="/stylesheets/viewProduct.css">
+    <%- include('../partials/head.ejs') %>
 </head>
 <body>
     <div class="product-container">
