--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,39 +1,30 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <title>
-    <%= title %>
-  </title>
+  <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <%- include('../partials/head.ejs') %>
 </head>
-
 <body>
-  <h1>
-    <%= title %>
-  </h1>
+  <h1><%= title %></h1>
   <% if (items && items.length > 0) { %>
-    <ul>
+    <div class="product-grid">
       <% items.forEach(function(item) { %>
-        <li>
-          <h2><%= item.name %></h2>
-          <p>Price: $<%= item.price %></p>
-          <p>Quantity: <%= item.quantity %></p>
-          <p>Description: <%= item.description %></p>
+        <div class="product-card">
+          <h2 class="product-name"><%= item.name %></h2>
           <% if (item.image) { %>
-            <img src="<%= item.image %>" alt="Image of <%= item.name %>">
+            <img class="product-image" src="<%= item.image %>" alt="Image of <%= item.name %>">
           <% } else if (item.thumbnail) { %>
-            <img src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
+            <img class="product-image" src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
           <% } %>
-        </li>
+          <p class="product-price">Price: $<%= item.price %></p>
+          <p class="product-quantity">Quantity: <%= item.quantity %></p>
+          <p class="product-description"><%= item.description %></p>
+        </div>
       <% }); %>
-    </ul>
+    </div>
   <% } else { %>
     <p>No items to display.</p>
   <% } %>
-
-  <img src="/images/cow.gif">
 </body>
-
 </html>
