--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html>
+  <%- include('../partials/head.ejs') %>
+
 <head>
   <title>
-    Home Page
+    <%= title %>
   </title>
-  <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <%- include('../partials/head.ejs') %>
 </head>
+
 <body>
-  <h1><%= title %></h1>
+  <h1>
+    <%= title %>
+  </h1>
   <% if (items && items.length > 0) { %>
-    <div class="product-grid">
+    <ul>
       <% items.forEach(function(item) { %>
-        <div class="product-card">
-          <h2 class="product-name"><%= item.name %></h2>
+        <li>
+          <h2><%= item.name %></h2>
+          <p>Price: $<%= item.price %></p>
+          <p>Quantity: <%= item.quantity %></p>
+          <p>Description: <%= item.description %></p>
           <% if (item.image) { %>
-            <img class="product-image" src="<%= item.image %>" alt="Image of <%= item.name %>">
+            <img src="<%= item.image %>" alt="Image of <%= item.name %>">
           <% } else if (item.thumbnail) { %>
-            <img class="product-image" src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
+            <img src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
           <% } %>
-          <p class="product-price">Price: $<%= item.price %></p>
-          <p class="product-quantity">Quantity: <%= item.quantity %></p>
-          <p class="product-description"><%= item.description %></p>
-        </div>
+        </li>
       <% }); %>
-    </div>
+    </ul>
   <% } else { %>
     <p>No items to display.</p>
   <% } %>
 
   <img src="/images/cow.gif">
 
+  <script>
+    function getQueryParam(param) {
+        const urlParams = new URLSearchParams(window.location.search);
+        return urlParams.get(param);
+    }
+    const sessionValue = getQueryParam('session');
+
+    if (sessionValue) {
+        console.log('Session:', sessionValue);
+    } else {
+        console.log('Session parameter not found in the URL.');
+    }
+</script>
+
 </body>
+
 </html>
