--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,25 +9,13 @@
 <body>
 	<header class="site-header">
 		<div class="logo">
-			<nav class="a">
-				<a href="/" class="logo">
-					<img src="../images/logo.png" alt="Logo" class="top-left-image">
-				</a>
-			</nav>
+			<img src="../images/logo.png" alt="Logo" style="float:left; width:100px; height:auto;" class="top-left-image">
 		</div>
-			<div class="action-items">
-			<div class="dropdown">
-				<button class="dropbtn">Sign In</button>
-				<div class="dropdown-content">
-					<a href="/create-account">Create Account</a>
-					<a href="/login">Log In</a>
-				</div>
-			</div>		
-			<nav class="user-navigation">
-				<a href="/cart" class="cart">
-					<img src="../images/shopping-cart.png" alt="">
-				</a>
-			</nav>
+		<nav class="user-navigation">
+			<a href="#" class="cart">
+				<img src="../images/shopping-cart.png" alt="">
+			</a>
+		</nav>
 	</header>
 </body>
 </html>
