--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -13,18 +13,20 @@
   <% if (items && items.length > 0) { %>
     <div class="product-grid">
       <% items.forEach(function(item) { %>
-        <div class="product-card">
-          <h2 class="product-name"><%= item.name %></h2>
-          <% if (item.image) { %>
-            <img class="product-image" src="<%= item.image %>" alt="Image of <%= item.name %>">
-          <% } else if (item.thumbnail) { %>
-            <img class="product-image" src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
-          <% } %>
-          <p class="product-price">Price: $<%= item.price %></p>
-          <p class="product-quantity">Quantity: <%= item.quantity %></p>
-          <p class="product-description"><%= item.description %></p>
-        </div>
-      <% }); %>
+        <a href="/view-product/<%= item.product_id %>" class="product-link">
+          <div class="product-card">
+            <h2 class="product-name"><%= item.name %></h2>
+            <% if (item.image) { %>
+              <img class="product-image" src="<%= item.image %>" alt="Image of <%= item.name %>">
+            <% } else if (item.thumbnail) { %>
+              <img class="product-image" src="<%= item.thumbnail %>" alt="Thumbnail of <%= item.name %>">
+            <% } %>
+            <p class="product-price">Price: $<%= item.price %></p>
+            <p class="product-quantity">Quantity: <%= item.quantity %></p>
+            <p class="product-description"><%= item.description %></p>
+          </div>
+        </a>
+      <% }); %>      
     </div>
   <% } else { %>
     <p>No items to display.</p>
