--- a/views/pages/cart.ejs
+++ b/views/pages/cart.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
     <link rel="stylesheet" href="/stylesheets/shoppingCart.css">
-    <%- include('../partials/head.ejs') %>
+    <%- include('../partials/head.ejs', {token: token}) %>
 </head>
 
 <% total = 0 %>
