--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -6,7 +6,7 @@
   </title>
   <title><%= title %></title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <%- include('../partials/head.ejs') %>
+  <%- include('../partials/head.ejs', {token: token}) %>
 </head>
 <body>
   <h1><%= title %></h1>
