--- a/views/pages/add-product.ejs
+++ b/views/pages/add-product.ejs
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Product</title>
   <link rel="stylesheet" href="/stylesheets/addProduct.css">
-  <%- include('../partials/head.ejs') %>
+  <%- include('../partials/head.ejs', {token:token}) %>
 </head>
 <body>
   <div class="add-product-container">
