--- a/views/pages/checkout.ejs
+++ b/views/pages/checkout.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Page</title>
   <link rel="stylesheet" href="/stylesheets/checkout.css">
-  <%- include('../partials/head.ejs') %>
+  <%- include('../partials/head.ejs', {token:token}) %>
 </head>
 <body>
   <div class="checkout-container">
