--- a/views/pages/add-product.ejs
+++ b/views/pages/add-product.ejs
@@ -8,26 +8,28 @@
 </head>
 <body>
   <div class="add-product-container">
-    <form class="add-product-form">
+    <form class="add-product-form" action="/add-product" method="post">
+      <input type="hidden" name="token" value= <%= token %>>
+
       <div class="form-group">
-        <label for="product-name">Product Name:</label>
-        <input type="text" id="product-name" name="product-name">
+        <label for="productName">Product Name:</label>
+        <input type="text" id="productName" name="productName">
       </div>
       <div class="form-group">
-        <label for="product-price">Price Per Unit:</label>
-        <input type="text" id="product-price" name="product-price" placeholder="$">
+        <label for="productPrice">Price Per Unit:</label>
+        <input type="text" id="productPrice" name="productPrice" placeholder="$">
       </div>
       <div class="form-group">
-        <label for="product-qty">Qty:</label>
-        <input type="number" id="product-qty" name="product-qty" value="1">
+        <label for="productQty">Qty:</label>
+        <input type="number" id="productQty" name="productQty" value="1">
       </div>
       <div class="form-group">
-        <label for="product-description">Description:</label>
-        <textarea id="product-description" name="product-description"></textarea>
+        <label for="productDescription">Description:</label>
+        <textarea id="productDescription" name="productDescription"></textarea>
       </div>
       <div class="form-group">
-        <label for="product-picture">Picture:</label>
-        <input type="file" id="product-picture" name="product-picture">
+        <label for="productPicture">Picture:</label>
+        <input type="text" id="productPicture" name="productPicture">
       </div>
       <button type="submit" class="add-product-btn">Add Product</button>
     </form>
