--- a/views/pages/add-product.ejs
+++ b/views/pages/add-product.ejs
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Add Product</title>
   <link rel="stylesheet" href="/stylesheets/addProduct.css">
-  <%- include('../partials/head.ejs', {token:token}) %>
+  <%- include('../partials/head.ejs', {token:token, admin: false}) %>
 </head>
 <body>
   <div class="add-product-container">
@@ -13,23 +13,23 @@
 
       <div class="form-group">
         <label for="productName">Product Name:</label>
-        <input type="text" id="productName" name="productName">
+        <input type="text" id="productName" name="productName" required>
       </div>
       <div class="form-group">
         <label for="productPrice">Price Per Unit:</label>
-        <input type="text" id="productPrice" name="productPrice" placeholder="$">
+        <input type="text" id="productPrice" name="productPrice" placeholder="$" required>
       </div>
       <div class="form-group">
         <label for="productQty">Qty:</label>
-        <input type="number" id="productQty" name="productQty" value="1">
+        <input type="number" id="productQty" name="productQty" value="1" required>
       </div>
       <div class="form-group">
         <label for="productDescription">Description:</label>
-        <textarea id="productDescription" name="productDescription"></textarea>
+        <textarea id="productDescription" name="productDescription" required></textarea>
       </div>
       <div class="form-group">
         <label for="productPicture">Picture:</label>
-        <input type="text" id="productPicture" name="productPicture">
+        <input type="text" id="productPicture" name="productPicture" required>
       </div>
       <button type="submit" class="add-product-btn">Add Product</button>
     </form>
