cart redirect fix

--- a/views/pages/view-product.ejs
+++ b/views/pages/view-product.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- <%- include('../partials/head.ejs', {token: token, admin:admin}) %> -->
+    <%- include('../partials/head.ejs', {token: token, admin:false}) %>
 
 <head>
     <meta charset="UTF-8">
