--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -25,7 +25,8 @@
 			</div>
 		<% } %>
 		
-	
+
+		<% if (token == "" || token == undefined || token == null) { %>
 			<div class="action-items">
 			<div class="dropdown">
 				<button class="dropbtn">Sign In</button>
@@ -33,12 +34,22 @@
 					<a href="/create-account">Create Account</a>
 					<a href="/login">Log In</a>
 				</div>
-			</div>		
+			</div>
+		<% } else { %>
+			<div class="action-items">
+			<a href="/">Log Out</a>
+			</div>
+		<% } %>
+
+
+			<% if (!admin) { %>
+		
 			<nav class="user-navigation">
 				<a href="/cart<%= token ? '?session=' + token : '' %>" class="cart">
 					<img src="../images/shopping-cart.png" alt="">
 				</a>
 			</nav>
+			<% } %>
 	</header>
 </body>
 </html>
