--- a/public/stylesheets/editProduct.css
+++ b/public/stylesheets/editProduct.css
@@ -16,6 +16,8 @@ body, html {
 
 .product-image img {
   max-width: 100%;
+  height: 400px;
+  width: auto;
   display: block;
   margin: 0 auto 20px;
 }
