--- a/views/pages/edit-product.ejs
+++ b/views/pages/edit-product.ejs
@@ -3,29 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Product</title>
+  <title>Edit Product: <%= item.name %></title>
   <link rel="stylesheet" href="/stylesheets/editProduct.css">
+  <%- include('../partials/head.ejs', {token: token}) %>
 </head>
 <body>
-  <div class="edit-product-container">
+  <form id="edit-product-form" class="edit-product-container" action="/update-product/<%= productId %>" method="post">
     <div class="product-image">
-      <img src="/images/logo.png" alt="Product Image">
+      <label for="product-image-url">Product Image URL:</label>
+      <input type="text" id="product-image-url" name="image" value="<%= item.image %>">
+      <img id="image-preview" src="<%= item.image %>" alt="Product Image">
     </div>
     <div class="product-info">
-      <h1>Product Name</h1>
-      <p class="price">$19.99</p>
+      <label for="product-name">Name:</label>
+      <input type="text" id="product-name" name="name" value="<%= item.name %>">
+      
+      <label for="product-price">Price:</label>
+      <input type="text" id="product-price" name="price" value="<%= item.price %>">
+      
       <div class="quantity-editor">
         <label for="quantity">Qty:</label>
-        <input type="number" id="quantity" name="quantity" value="1">
+        <input type="number" id="quantity" name="quantity" value="<%= item.quantity %>">
       </div>
-      <button class="btn save-changes">Save Changes</button>
-      <button class="btn delete-product">Delete Product</button>
     </div>
     <div class="product-description">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <label for="product-description">Description:</label>
+      <textarea id="product-description" name="description"><%= item.description %></textarea>
     </div>
-  </div>
+    <div class="product-actions">
+      <input type="submit" class="btn save-changes" value="Save Changes">
+      <button type="button" class="btn delete-product">Delete Product</button>
+    </div>
+  </form>
 </body>
 </html>
